# src/handler.rs
@@ -1,5 +1,6 @@
-use actix_web::{get, web, Responder};
-use uuid::Uuid;
+use actix_web::{body::BoxBody, get, web, HttpResponse, Responder};
+use openapi::models::UserRegisterRequest;
+use sqlx::Row;
 
 use crate::AppState;
 
@@ -8,15 +9,27 @@ async fn health() -> impl Responder {
     "UP"
 }
 
-#[get("/")]
-async fn create_user(app_state: web::Data<AppState>) -> impl Responder {
+#[get("/user/register")]
+async fn create_user(app_state: web::Data<AppState>, body: web::Json<UserRegisterRequest>) -> HttpResponse<BoxBody> {
 
-    let _ = sqlx::query("SELECT 1 + 1 as sum").fetch_one(&app_state.pg_pool).await.expect("Failed query");
 
-    "get users!"
-}
+    let is_conflict = sqlx::query("SELECT 1 FROM users WHERER username = $1")
+        .bind(body.name.clone())
+        .fetch_one(&app_state.pg_pool)
+        .await;
 
-#[get("/users/{uid}")]
-async fn get_user(_app_state: web::Data<AppState>, _uid: web::Path<Uuid>) -> impl Responder {
-    "get!"
+
+    match is_conflict {
+        Ok (row) => {
+           if !row.is_empty() {
+                return HttpResponse::Conflict().body("Username or E-Mail already in use!")
+            }
+        },
+        Err (_) => {
+            return HttpResponse::InternalServerError().body("Something went wrong.");
+        }
+    }
+
+
+    return HttpResponse::Created().into();
 }
